# sero

./: .dockerignore  .env.tests  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  docker-compose.dev.yml  docker-compose.yml  openapi.json  openapi.yml  readme.md
.github/workflows/: build.yml  dev.yml  release.yml  tag.yml  test.yml  testable.yml  tests.yml
entity/: Cargo.toml
entity/src/: cors.rs  file.rs  lib.rs  mod.rs  origin.rs  prelude.rs  subdomain.rs  user.rs
migration/src/: lib.rs  m20230927_162921_create_users.rs  m20230929_081415_create_subdomains.rs  m20230929_152215_create_file.rs  m20230929_152215_create_files.rs  m20231105_171000_create_cors.rs  m20231105_171000_create_origin.rs
nginx-templates/: default.conf.template
scripts/: generate-entity.sh
src/: apperror.rs  lib.rs  main.rs  openapi.rs
src/api/: mod.rs
src/api/auth/: mod.rs
src/api/auth/login/: error.rs  handler.rs  request.rs  response.rs
src/api/auth/login/tests/: bad_credentials.rs  call.rs  correct.rs  mod.rs  not_found.rs
src/api/auth/registration/: error.rs  handler.rs  request.rs  response.rs
src/api/auth/registration/tests/: bad_credentials.rs  call.rs  correct.rs  guard.rs  mod.rs  occupied.rs
src/api/origin/: mod.rs
src/api/origin/create/: error.rs  handler.rs  mod.rs  request.rs  response.rs
src/api/origin/create/tests/: call.rs  correct.rs
src/api/origin/delete/: error.rs  handler.rs
src/api/origin/delete/tests/: call.rs  correct.rs  mod.rs  only_one.rs
src/api/origin/list/: error.rs  handler.rs  response.rs
src/api/origin/list/tests/: call.rs  correct.rs
src/api/origin/purge/: error.rs  handler.rs  mod.rs
src/api/origin/purge/tests/: call.rs  correct.rs
src/api/origin/retrieve/: error.rs  handler.rs  mod.rs  response.rs
src/api/origin/retrieve/tests/: call.rs  correct.rs
src/api/site/: mod.rs
src/api/site/disable/: error.rs  handler.rs
src/api/site/disable/tests/: call.rs  correct.rs  mod.rs
src/api/site/download/: error.rs  handler.rs
src/api/site/download/tests/: call.rs  cant_download_removed.rs  correct_many.rs  mod.rs
src/api/site/enable/: error.rs  handler.rs
src/api/site/enable/tests/: call.rs  correct.rs
src/api/site/page/: error.rs  handler.rs
src/api/site/page/tests/: call.rs
src/api/site/teardown/: error.rs  handler.rs
src/api/site/teardown/tests/: call.rs  correct.rs
src/api/site/upload/: error.rs  handler.rs
src/api/site/upload/tests/: big.rs  call.rs  empty.rs  guard.rs  mod.rs
src/config/: mod.rs
src/configuration/: env.rs  mod.rs  reader.rs
src/extractors/: auth.rs  mod.rs  subdomain.rs  subdomain_name.rs  subdomain_owned.rs
src/extractors/guards/: mod.rs  registration.rs  upload.rs
src/handlers/: auth.rs  cors.rs  mod.rs  sites.rs
src/services/: archive.rs  auth.rs  cors.rs  mod.rs  sites.rs  users.rs
src/services/archive/: error.rs  mod.rs  models.rs  parameters.rs  service.rs
src/services/auth/: error.rs  mod.rs  parameters.rs  service.rs
src/services/origin/: error.rs  service.rs
src/services/site/: error.rs  parameters.rs  service.rs
src/state/: mod.rs
tests/: all.rs
