[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
sea-orm = { version = "0.12" }
serde = { version = "1.0.196", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "preserve_order"] }
